ecommerce-be/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-be-deployment
  namespace: ecommerce
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ecommerce-be-deployment
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ecommerce-be-deployment
      namespace: ecommerce
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: ecommerce-application-properties-secret
                optional: false
          image: registry.h1euda.click/ecommerce-storage/ecommerce-be:v1
          name: ecommerce-be
          ports:
            - containerPort: 8080
              name: tcp
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - mountPath: /run/src/main/resources/application.properties
              name: application-properties-volume
              subPath: application.properties
      imagePullSecrets:
        - name: harbor-secret
      volumes:
        - configMap:
            defaultMode: 420
            name: ecommerce-be-application-properties-configmap
          name: application-properties-volume
