ecommerce-be/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-be-service
  namespace: ecommerce
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ecommerce-be-deployment
  sessionAffinity: None
  type: ClusterIP
